# termesh

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: CLAUDE.md
.claude/rules/: git-conventions.md  rust-conventions.md  security.md
.claude/tasks/: ROADMAP.md
.claude/tasks/archive/roadmap-v1/: phase-3-usable-terminal.md  phase-4-multi-session-split.md  phase-5.5-code-quality-refactoring.md  phase-5.6-side-panel-improvement.md
.claude/tasks/archive/roadmap-v1/phase-5-agent-control-tower/: summary.md
.claude/tasks/queue/completed/: 001-cargo-workspace.md  002-termesh-core.md  003-termesh-pty.md  004-termesh-terminal.md  006-termesh-platform.md  007-termesh-layout.md  008-termesh-input.md  009a-event-loop-app-integration.md  009d-pty-io-connection.md  010-termesh-agent.md  011-termesh-diff.md  012-workspace-preset.md  014-split-mode-ui.md  015-agent-status-display.md  016-performance-optimization.md  018-pty-windows-compat.md  019-wgpu-backend-compat.md  020-ci-cd-multiplatform.md  022-gemini-cli-adapter.md  023-codex-cli-adapter.md  028-hooks-file-protection.md  037-agent-detection-pipeline.md  038-preset-session-spawn.md  041-file-watcher-integration.md
.claude/tasks/queue/in_progress/: 009b-multi-session-manager.md  009e-smoke-test.md  021-agent-adapter-trait.md  024-auth-api-client.md  025-license-storage.md  026-auth-gate.md  027-rules-auto-load.md  039-session-list-panel-render.md
.claude/tasks/queue/pending/: 005-termesh-renderer.md  006-termesh-platform.md  008-termesh-input.md  009-terminal-integration-test.md  009c-layout-rendering-integration.md  010-termesh-agent.md  011-termesh-diff.md  012-workspace-preset.md  013-focus-mode-ui.md  017-termesh-app.md  018-pty-windows-compat.md  019-wgpu-backend-compat.md  038-action-handlers-basic.md  039-action-handlers-advanced.md  040-integration-verification.md  040-side-panel-render.md  041-srgb-rendering.md  042-keymap-config-loader.md  043-theme-config.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/examples/: fullstack.toml
crates/termesh-agent/: Cargo.toml
crates/termesh-agent/src/: adapter.rs  claude_code.rs  codex_cli.rs  gemini_cli.rs  lib.rs  preset.rs  registry.rs  workspace.rs
crates/termesh-app/: Cargo.toml
crates/termesh-app/src/: agent_picker.rs  app.rs  cli.rs  main.rs  session_manager.rs  session_picker.rs  theme.rs  ui_grid.rs
crates/termesh-core/: Cargo.toml
crates/termesh-core/src/: auth.rs  auth_gate.rs  config.rs  error.rs  event.rs  lib.rs  license.rs  platform.rs  project.rs  types.rs
crates/termesh-diff/: Cargo.toml
crates/termesh-diff/src/: diff_generator.rs  git_changes.rs  history.rs  lib.rs  watcher.rs
crates/termesh-input/: Cargo.toml
crates/termesh-input/src/: action.rs  handler.rs  keymap.rs  lib.rs
crates/termesh-layout/: Cargo.toml
crates/termesh-layout/src/: focus_layout.rs  layout.rs  lib.rs  pane.rs  pane_header.rs  session_list.rs  side_panel.rs  split_layout.rs  status_display.rs
crates/termesh-platform/: Cargo.toml
crates/termesh-platform/src/: event_loop.rs  input_bridge.rs  lib.rs  window.rs
crates/termesh-pty/: Cargo.toml
crates/termesh-pty/src/: lib.rs  pty.rs  session.rs
crates/termesh-renderer/: Cargo.toml
crates/termesh-renderer/src/: font.rs  glyph_cache.rs  lib.rs  renderer.rs
crates/termesh-renderer/src/shaders/: terminal.wgsl
crates/termesh-terminal/: Cargo.toml
crates/termesh-terminal/src/: color.rs  grid.rs  lib.rs  terminal.rs
resources/macos/: Info.plist
