[package]
name = "termesh-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"] }
