[package]
name = "termesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
dirs = "6"
reqwest = { version = "0.13", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
log = "0.4"

[features]
default = ["auth"]
auth = ["reqwest", "base64"]

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tempfile = "3"
