[package]
name = "termesh-platform"
version.workspace = true
edition.workspace = true

[dependencies]
termesh-core = { path = "../termesh-core" }
termesh-renderer = { path = "../termesh-renderer" }
termesh-terminal = { path = "../termesh-terminal" }
winit = "0.30"
wgpu = "24"
pollster = "0.4"
log = "0.4"
