[package]
name = "termesh-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
termesh-core = { path = "../termesh-core" }
termesh-renderer = { path = "../termesh-renderer" }
termesh-terminal = { path = "../termesh-terminal" }
termesh-input = { path = "../termesh-input" }
winit = "0.30"
wgpu = "28"
pollster = "0.4"
arboard = "3"
log = "0.4"
