[package]
name = "termesh-pty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
termesh-core = { path = "../termesh-core" }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "rt", "time"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
